# CustomEval

./: .gitignore  DOCUMENTATION.md  DOCUMENTATION.zh.md  PLAN-M1.md  PLAN-M2.md  PLAN-M3.md  README.md  README.zh.md  SPEC.md  WALKTHROUGH.md  WALKTHROUGH.zh.md  eval.yaml  pyproject.toml
cdk/: README.md  app.py  cdk.json  requirements.txt
cdk/saes_cdk/: __init__.py  stack.py
cdk/tests/: test_stack.py
examples/: BAD_AGENT_TRANSCRIPT.txt  BAD_EXAMPLES_OUTPUT.txt  BUILTIN_SUITE_OUTPUT.txt  FRAMEWORK_MATRIX_OUTPUT.txt  FRAMEWORK_MATRIX_TRANSCRIPT.txt  GOODBAD_EVAL_MULTITURN_FIXED.txt  GOODBAD_EVAL_OUTPUT.txt  GOODBAD_MULTITURN.md  GOODBAD_TRANSCRIPT.txt  PART3_TRANSCRIPT.txt  README.md  REPRO_TRANSCRIPT.txt  RUN_LOG.md  RUN_LOG_PART3.md  bad_examples.py  builtin_suite.py  framework_matrix.py  framework_matrix_verbose.py  goodbad_eval.py  goodbad_run.sh  my_agent.py
examples/agent_sdk/: AGENT_SDK_EVAL_OUTPUT.json  AGENT_SDK_EVAL_OUTPUT.txt  AGENT_SDK_REPORT.html  README.md  collector.yaml  requirements.txt  run_agent.py
examples/complex_agents/: COMPLEX_EVAL_OUTPUT.txt  COMPLEX_SCENARIOS.md  COMPLEX_TRANSCRIPT.txt  README.md  complex_eval.py  run_scenarios.sh
src/saes/: __init__.py  cli.py
src/saes/config/: __init__.py  (+2 more)
tests/: test_builtins_e2e.py  test_cli.py  test_cloudwatch.py  test_config.py  test_conformance.py  test_evaluators.py  test_gate.py  test_ground_truth.py  test_ingest.py  test_judge.py  test_lambda_evaluator.py  test_probe.py  test_report.py  test_runner.py  test_session_tracker.py  test_tool_supplement.py  test_trajectory.py  test_worker.py
(+56 files in other folders)
