[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saes"
version = "0.1.0"
description = "Strands Agent Evaluation Suite — open-source agent evaluation with OpenAI-compatible judge selection and AgentCore Observability integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "strands-agents>=1.0.0",
    "strands-agents-evals>=1.0.0",
    "strands-agents[openai]>=1.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
saes = "saes.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/saes"]

[tool.hatch.build.targets.wheel.force-include]
"src/saes/report/templates" = "saes/report/templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer idiom: Option/Argument calls in defaults are the documented pattern
"src/saes/cli.py" = ["B008"]
# inline span-dict test fixtures read better on one line than hard-wrapped
"tests/test_tool_supplement.py" = ["E501"]
